--- a/_posts/2020-3-14-TestPage1.html
+++ b/_posts/2020-3-14-TestPage1.html
@@ -34,7 +34,7 @@
     <body>
     <h1 id="rcorners">Welcome to the world of HTML!</h1>
     <p>My <em>dazzling</em> adventures into the <i>incredible</i> world of this <strong>snazztastically</strong> charming <b><u>programming language!</b></u>
-    <p>aaaaaaand here is <a href="secondwebpage.html"><u>Page 2</u></a>!</p>
+    <p>aaaaaaand here is <a href="2020-3-14-TestPage2.html"><u>Page 2</u></a>!</p>
 
     <h2>To-do List 16/04/2020:</h2>
     <ol>
