--- a/_posts/2020-3-14-TestPage2.html
+++ b/_posts/2020-3-14-TestPage2.html
@@ -54,7 +54,7 @@
     <pre>
 
     </pre>
-    <p><a href="firstwebpage.html">...return to the OG page ici.</a> </p>
+    <p><a href="https://kupteraz.github.io/home/TestPage1/">...return to the OG page ici.</a> </p>
     <img src="../assets/images/remysemi.jpg" alt="Alors - c'est Remy avec un 'Semi!'" height='800' width='2400'>
     <p>...and above is a stunning image of <i>our lord</i> <i><b>Remy!</b></i></p>
     </body>
