--- a/_pages/indexcat.html
+++ b/_pages/indexcat.html
@@ -4,6 +4,7 @@ layout: category
 permalink: /indexcat/
 author_profile: true
 taxonomy: kewl
+entries_layout: list
 ---
 
 {% for category in site.categories %}
